--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/fichas_medicas
 endorsed.classpath=
 excludes=
-file.reference.lombok.jar=lib\\lombok.jar
+file.reference.lombok.jar=..\\fichas_medicas\\lib\\lombok.jar
 includes=**
 jar.compress=false
 javac.classpath=\
